--- a/archive_backend/src/main/resources/application.properties
+++ b/archive_backend/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=200MB
+
+
+# create mongo repo
+
+spring.data.mongodb.uri=mongodb://localhost:27017/archives_db
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
